Add README for create-roldy-app CLI tool and rename package to roldy-app

--- a/cli/create-roldy-app/package.json
+++ b/cli/create-roldy-app/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "create-rol-app",
+  "name": "roldy-app",
   "version": "1.0.0",
   "description": "CLI tool to create a new roldy-templates project from templates",
   "type": "module",
   "bin": {
-    "create-rol-app": "./index.js"
+    "roldy-app": "./index.js"
   },
   "dependencies": {
     "prompts": "^2.4.2",
