--- a/cli/create-roldy-app/package.json
+++ b/cli/create-roldy-app/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "roldy-app",
-  "version": "1.0.0",
+  "name": "create-roldy-app",
+  "version": "0.0.1",
   "description": "CLI tool to create a new roldy-templates project from templates",
   "type": "module",
   "bin": {
-    "roldy-app": "./index.js"
+    "create-roldy-app": "./index.js"
   },
   "dependencies": {
     "prompts": "^2.4.2",
