feat: add dropdown menu components and input component
- Created a new dropdown menu component with various sub-components including DropdownMenu, DropdownMenuItem, DropdownMenuContent, etc.
- Introduced a new Input component with v-model support and styling.
- Added utility functions for class name merging.
- Implemented navigation menu components including NavigationMenu, NavigationMenuItem, NavigationMenuLink, etc.
- Developed a separator component for UI consistency.
- Set up Axios for API requests to the Pokémon API.
- Created views for Home and NotFound, along with a second view for Pokémon search.
- Configured Vue Router for navigation between views.
- Established a Pinia store for state management.
- Added TypeScript configuration files for better type support.
- Configured Vite for building the application with Vue 3 and Tailwind CSS.

--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "roldy-templates",
   "private": true,
   "workspaces": [
-    "cli/*",
-    "templates/*"
+    "cli/*"
   ],
   "version": "1.0.0",
   "description": "A collection of templates for roldyoran projects",
