--- a/templates/backend/hono-bun-pgsql/package.json
+++ b/templates/backend/hono-bun-pgsql/package.json
@@ -4,6 +4,7 @@
     "dev": "bun run --hot src/index.ts"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.7.4",
     "hono": "^4.10.4"
   },
   "devDependencies": {
