feat: add Dockerfile and .dockerignore for containerization setup

--- a/templates/backend/hono-bun-pgsql/package.json
+++ b/templates/backend/hono-bun-pgsql/package.json
@@ -1,7 +1,9 @@
 {
   "name": "hono-bun-pgsql",
   "scripts": {
-    "dev": "bun run --hot src/index.ts"
+    "dev": "bun run --hot src/index.ts",
+    "build": "bun build src/index.ts --outdir dist --minify --target bun",
+    "start": "bun dist/index.js"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.7.4",
